--- a/form.html
+++ b/form.html
@@ -7,11 +7,24 @@
     <img src="tree.jpg" alt="Free Tree" width="500">
     <form action="submit.php" method="post">
 
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name">
+        <label for="first_name"><strong>First Name:</strong></label>
+        <input type="text" name="first_name" id="first_name">
         <br>
-        <label for="email">Email:</label>
+        <label for="last_name"><strong>Last Name:</strong></label>
+        <input type="text" name="last_name" id="last_name">
+        <br>
+        <p><strong>Type of Tree:</strong></p>
+        <input type="radio" id="oak" name="tree" value="oak">
+        <label for="oak">OAK</label><br>
+        <input type="radio" id="acorn" name="tree" value="acorn">
+        <label for="acorn">ACORN</label><br>
+        <input type="radio" id="pine" name="tree" value="pine">
+        <label for="pine">PINE</label>
+        <br>
+        <br>
+        <label for="email"><strong>Email Address:</strong></label>
         <input type="email" name="email" id="email">
+        <br>
         <br>
         <input type="button" value="Get a FREE TREE!">
 
