--- a/form.html
+++ b/form.html
@@ -7,11 +7,11 @@
     <img src="tree.jpg" alt="Free Tree" width="500">
     <form action="submit.php" method="post">
 
-        <label for="first_name"><strong>First Name:</strong></label>
-        <input type="text" name="first_name" id="first_name">
+        <label for="fname"><strong>First Name:</strong></label>
+        <input type="text" name="fname" id="fname">
         <br>
-        <label for="last_name"><strong>Last Name:</strong></label>
-        <input type="text" name="last_name" id="last_name">
+        <label for="lname"><strong>Last Name:</strong></label>
+        <input type="text" name="lname" id="lname">
         <br>
         <p><strong>Type of Tree:</strong></p>
         <input type="radio" id="oak" name="tree" value="oak">
@@ -26,7 +26,7 @@
         <input type="email" name="email" id="email">
         <br>
         <br>
-        <input type="button" value="Get a FREE TREE!">
+        <input type="button" value="SUBMIT & Get a FREE TREE!">
 
     </form>
 </body>
