--- a/form.html
+++ b/form.html
@@ -13,6 +13,9 @@
         <label for="lname"><strong>Last Name:</strong></label>
         <input type="text" name="lname" id="lname">
         <br>
+        <label for="email"><strong>Email Addr:</strong></label>
+        <input type="email" name="email" id="email">
+        <br>
         <p><strong>Type of Tree:</strong></p>
         <input type="radio" id="oak" name="tree" value="oak">
         <label for="oak">OAK</label><br>
@@ -20,10 +23,6 @@
         <label for="acorn">ACORN</label><br>
         <input type="radio" id="pine" name="tree" value="pine">
         <label for="pine">PINE</label>
-        <br>
-        <br>
-        <label for="email"><strong>Email Address:</strong></label>
-        <input type="email" name="email" id="email">
         <br>
         <br>
         <input type="button" value="SUBMIT & Get a FREE TREE!">
