--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <img src="tree.jpg" alt="Free Tree" width="500">
-    <form action="submit.php" method="post">
+    <form action="#"> <! -- this reloads page as no php file -->
 
         <label for="fname"><strong>First Name:</strong></label>
         <input type="text" name="fname" id="fname">
@@ -25,7 +25,7 @@
         <label for="pine">PINE</label>
         <br>
         <br>
-        <input type="button" value="SUBMIT & Get a FREE TREE!">
+        <input type="submit" value="SUBMIT & Get a FREE TREE!">
 
     </form>
 </body>
