--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
         <label for="fname"><strong>First Name:</strong></label>
         <input type="text" name="fname" id="fname">
         <br>
-        <label for="lname"><strong>Last Name:</strong></label>
+        <label for="lname"><strong>Last Name:  </strong></label>
         <input type="text" name="lname" id="lname">
         <br>
         <label for="email"><strong>Email Addr:</strong></label>
@@ -23,9 +23,11 @@
         <label for="acorn">ACORN</label><br>
         <input type="radio" id="pine" name="tree" value="pine">
         <label for="pine">PINE</label>
+        <p><strong>Tree Delivery Instructions:</strong></p>
+        <textarea name="message" rows="5" columns="30"></textarea>
         <br>
-        <br>
-        <input type="submit" value="SUBMIT & Get a FREE TREE!">
+        <p>By clicking SUBMIT you agree to all Terms & Conditions.</p>
+        <input type="submit" value="SUBMIT & Get Your FREE TREE!">
 
     </form>
 </body>
