--- a/form.html
+++ b/form.html
@@ -24,6 +24,7 @@
         <input type="radio" id="pine" name="tree" value="pine">
         <label for="pine">PINE</label>
         <p><strong>Tree Delivery Instructions:</strong></p>
+        <p>Let us know your address and where you'd like us to plonk it:</p>
         <textarea name="message" rows="5" columns="30"></textarea>
         <br>
         <p>By clicking SUBMIT you agree to all Terms & Conditions.</p>
